<resources>
    <string name="app_name">Lab 2 - Linear</string>
    <string name="lab_title">Lab 1</string>
    <string name="layout_title">Responsive Layout 1</string>
    <string name="word_this">This</string>
    <string name="word_is">is</string>
    <string name="word_my">my</string>
    <string name="word_first">first</string>
    <string name="application_label">Android Application</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
</resources>
