<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/surface">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/black">
        <TextView
            android:id="@+id/lab_title"
            style="@style/CellText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/lab_title" />
        <TextView
            android:id="@+id/layout_title"
            style="@style/CellText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/black"
            android:text="@string/layout_title" />
        <LinearLayout
            android:id="@+id/word_row"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/word_this"
                style="@style/CellText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/red"
                android:textColor="@color/white"
                android:text="@string/word_this" />
            <TextView
                android:id="@+id/word_is"
                style="@style/CellText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:text="@string/word_is" />
            <TextView
                android:id="@+id/word_my"
                style="@style/CellText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/purple"
                android:textColor="@color/white"
                android:text="@string/word_my" />
            <TextView
                android:id="@+id/word_first"
                style="@style/CellText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:textColor="@color/black"
                android:text="@string/word_first" />
        </LinearLayout>
        <TextView
            android:id="@+id/application_label"
            style="@style/CellText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/application_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:background="@color/surface">
        <Button
            android:id="@+id/change_button"
            style="@style/ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:text="@string/change" />
        <Button
            android:id="@+id/cancel_button"
            style="@style/ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
